--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toast": "^1.2.8",
     "@radix-ui/react-tooltip": "^1.2.0",
     "ai": "^3.3.20",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
