fix: supprimer champs undefined dans convertToFirestoreAnnouncement
- Suppression des champs content et expiresAt définis à undefined
- Ces champs sont optionnels dans le type Announcement
- Firestore ne supporte pas les valeurs undefined explicites
- Résout l'erreur 'Unsupported field value: undefined' lors de l'import

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:safe": "node scripts/dev.js",
     "verify-images": "node scripts/verifier-images.js",
     "create-images": "node scripts/creer-structure-images.js",
-    "import-echos": "tsx scripts/import-echos.ts"
+    "import-echos": "tsx scripts/import-echos.ts",
+    "test-airtable": "tsx scripts/test-airtable.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.48",
